@@ -553,10 +553,6 @@ static struct fuse_operations xmp_oper = {
 #endif
 	.lock		= xmp_lock,
 	.flock		= xmp_flock,
-
-#if HAVE_UTIMENSAT
-	.flag_utime_omit_ok = 1,
-#endif
 };
 
 int main(int argc, char *argv[])
